tests/paczka1/small_fuzzy/45510376.err
Error in line 7: rkoaLc A272 16,5
Error in line 8: rkoaLc A665 9,2
Error in line 3: 47lpAImO A665 58,4
